crates/vue_oxlint_jsx/src/test/snapshots/codegen/basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: ret.source_text
---
async()=>{const count = 1;
<><template><div>{count}</div></template><script lang="js" setup></script><style></style></>};
