crates/vue_oxlint_jsx/src/test/snapshots/codegen/comments_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: ret.source_text
---
async()=>{<><template><div v-bind:key={1}>{}</div></template><script lang="ts"></script><script lang="ts" setup></script></>};
