crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <div v-bind:class={"w-100"} />
  <div v-bind:[some]={{ [some]: 2 }} />
  <Some v-slot:default={} />{{ default: ({ a }) => <></> }}
  <input v-model:={text} />
  <Some v-bind:some.none={1} />
  <div v-bind:id={id} />
  <div v-bind:msg-id={msgId} />
  <div {...{
		id: "app",
		class: "w-100"
	}} />
  <div {...{ id: "app" }} />
</template>
</>;
};
