crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_v-for-error_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <div v-for:={} />
  <div v-for:={} />
  <div v-for:={} />
  <div v-for:={} />
  <div v-for:={} />
</template>
</>;
};
