crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_v-if-error_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <div v-else-if:={} />
  <div v-else: />

  
  {1 ? <><div v-if:={} /></> : undefined}<div v-if:={} />
  <div v-if: />
  <div v-else-if:={} />
  <div v-else-if: />
</template>

</>;
};
