crates/vue_oxlint_jsx/src/test/snapshots/codegen/root_texts_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

async()=>{<><template></template><script></script><script></script><style></style></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 87,
        },
        original_span: Span {
            start: 0,
            end: 126,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 33,
        },
        original_span: Span {
            start: 0,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 33,
        },
        original_span: Span {
            start: 0,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 13,
            end: 21,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 13,
            end: 21,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 24,
            end: 32,
        },
        original_span: Span {
            start: 12,
            end: 20,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 24,
            end: 32,
        },
        original_span: Span {
            start: 12,
            end: 20,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 33,
            end: 50,
        },
        original_span: Span {
            start: 21,
            end: 38,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 33,
            end: 50,
        },
        original_span: Span {
            start: 21,
            end: 38,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 34,
            end: 40,
        },
        original_span: Span {
            start: 22,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 34,
            end: 40,
        },
        original_span: Span {
            start: 22,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 43,
            end: 49,
        },
        original_span: Span {
            start: 31,
            end: 37,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 43,
            end: 49,
        },
        original_span: Span {
            start: 31,
            end: 37,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 50,
            end: 67,
        },
        original_span: Span {
            start: 54,
            end: 71,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 50,
            end: 67,
        },
        original_span: Span {
            start: 54,
            end: 71,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 51,
            end: 57,
        },
        original_span: Span {
            start: 55,
            end: 61,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 51,
            end: 57,
        },
        original_span: Span {
            start: 55,
            end: 61,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 60,
            end: 66,
        },
        original_span: Span {
            start: 64,
            end: 70,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 60,
            end: 66,
        },
        original_span: Span {
            start: 64,
            end: 70,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 67,
            end: 82,
        },
        original_span: Span {
            start: 102,
            end: 117,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 67,
            end: 82,
        },
        original_span: Span {
            start: 102,
            end: 117,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 68,
            end: 73,
        },
        original_span: Span {
            start: 103,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 68,
            end: 73,
        },
        original_span: Span {
            start: 103,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 76,
            end: 81,
        },
        original_span: Span {
            start: 111,
            end: 116,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 76,
            end: 81,
        },
        original_span: Span {
            start: 111,
            end: 116,
        },
    },
]
